--- a/package.json
+++ b/package.json
@@ -25,9 +25,12 @@
     "karma-webpack": "^3.0.5",
     "mocha": "^6.1.4",
     "progress-bar-webpack-plugin": "^1.12.1",
+    "puppeteer": "^1.15.0",
     "sinon": "^7.3.2",
     "sinon-chai": "^3.3.0",
+    "vue": "^2.6.10",
     "vue-loader": "^15.7.0",
+    "vue-template-compiler": "^2.6.10",
     "webpack": "^4.30.0"
   },
   "dependencies": {}
