--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "devDependencies": {
     "@babel/core": "^7.4.4",
     "@babel/preset-env": "^7.4.4",
+    "@vue/test-utils": "^1.0.0-beta.29",
     "babel-loader": "^8.0.5",
     "babel-plugin-istanbul": "^5.1.4",
     "chai": "^4.2.0",
